--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -1,11 +1,13 @@
 {% extends "master.html" %}
 {% block head %}
+{% block title %} Welcome to my blog! {% endblock %}
 {% endblock %}
 {% block body %}
 <div class="timeline">
     <ul class="entries">
         {% for entry in entries %}
-            <li><h2>{{ entry.title }}</h2>{{ entry.content }}</li>
+        <li><h2><a href="{{ url_for('view_post',post_id=entry.PostID) }}">
+            {{ entry.title }}</a></h2>{{ entry.content }}</li>
         {% else %}
             <li><h2>No Posts found.</h2>Hello there, if you're seeing this the template could not find any posts in the database.
             <br>Try checking your SQL query and database data.</li>
