Touched up CSS and HTML a bit, working towards getting a basic design skeleton.

--- a/templates/master.html
+++ b/templates/master.html
@@ -7,7 +7,14 @@
        href="{{ url_for('static',
                         filename='style.css')}}" />
 </head>
-<body>
+<body id="container">
+<div id="header">
+<img src="{{ url_for('static', filename= 'banner.png') }}" height="200px" width="800px">
+
+
+</div>
+
+
 {% block body %}{% endblock %}
 </body>
 </html>
