--- a/static/style.css
+++ b/static/style.css
@@ -31,3 +31,19 @@
     background-color: rgba(0,0,0,.6)
     color: white
 }
+
+
+#header {
+    position: relative;
+    width: calc(100vw - 25vw);
+    height: 20px;
+    background-color: rgb(255,0,0);
+    left: calc(100vw - 75vw);
+    text-align: center;
+}
+
+#banner {
+    border-radius: 50px;
+}
+
+
