--- a/templates/master.html
+++ b/templates/master.html
@@ -9,7 +9,7 @@
 </head>
 <body id="container">
 <div id="header">
-<img src="{{ url_for('static', filename= 'banner.png') }}" height="200px" width="800px">
+<img src="{{ url_for('static', filename= 'banner.png') }}" height=200px width = 50% id="banner">
 
 
 </div>
